--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<executable>/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64/bin/javac</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
