--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,12 @@
-version: 0.2
-
-phases:
-  build:
-    commands:
-	  - echo Build started on `date`
-      - mvn clean
-      - mvn install
-artifacts:
-  files:
+--- 
+artifacts: 
+  files: 
     - appspec.yml
-    - 'target/coronavirus-tracker-0.0.1-SNAPSHOT.jar'
+    - target/coronavirus-tracker-0.0.1-SNAPSHOT.jar
+phases: 
+  build: 
+    commands: 
+      - "echo Build started on `date`"
+      - "mvn clean"
+      - "mvn install"
+version: 0.2
