--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,26 @@
---- 
+---
+env:
+  variables:
+    JAVA_HOME: "/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64/bin/javac"
 artifacts: 
   files: 
     - appspec.yml
     - target/coronavirus-tracker-0.0.1-SNAPSHOT.jar
-phases: 
-  build: 
+phases:
+    pre_build:
+    commands:
+      - echo Entered the pre_build phase...
+    finally:
+      - echo This always runs even if the login command fails
+    build: 
     commands: 
       - "echo Build started on `date`"
       - "mvn clean"
       - "mvn install"
+    finally:
+      - echo This always runs even if the install command fails
+    post_build:
+    commands:
+      - echo Entered the post_build phase...
+      - echo Build completed on `date`
 version: 0.2
