--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    JAVA_HOME: "/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64/bin/javac"
+    JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
   
 phases:
   install:
@@ -21,7 +21,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn clean install
+      - mvn  install
     finally:
       - echo This always runs even if the install command fails
   post_build:
