--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,5 @@
 version: 0.2
-
-env:
-  variables:
-    JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
-  
+ 
 phases:
   install:
     commands:
@@ -21,7 +17,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn  install
+      - mvn clean install
     finally:
       - echo This always runs even if the install command fails
   post_build:
