--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
+      - mvn clean
       - mvn install
     finally:
       - echo This always runs even if the install command fails
