--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - echo Entered the install phase...
       - apt-get update -y
       - apt-get install -y maven
+      - cp ./settings.xml /root/.m2/settings.xml
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
