--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,10 @@
 version: 0.2
 
+env:
+  variables:
+    JAVA_HOME: "/usr/lib/jvm/java-1.8.0-openjdk"
+    PATH: $JAVA_HOME/bin:$PATH
+    
 phases:
   install:
     commands:
