--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,12 @@ version: 0.2
 env:
   variables:
     JAVA_HOME: "/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64"
-    PATH: "${JAVA_HOME}/bin:$PATH"
 phases:
   install:
     commands:
       - echo Entered the install phase...
-      - sudo wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
-      - sudo sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo
-      - sudo yum install -y apache-maven
+      - apt-get update -y
+      - apt-get install -y maven
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
