--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       java: openjdk11
     commands:
       - echo Entered the install phase...
+      - apt-get install openjdk-8-jdk
       - apt-get update -y
       - apt-get install -y maven
     finally:
