--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       java: openjdk11
     commands:
       - echo Entered the install phase...
-      - apt-get install openjdk-8-jdk
+      - apt-get install java-1.8.0-openjdk-devel
       - apt-get update -y
       - apt-get install -y maven
     finally:
