--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<fork>true</fork>
+					<source>1.8</source>
+      				<target>1.8</target>
 					<executable>/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64/bin/javac</executable>
 				</configuration>
 			</plugin>
