--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
       - echo Entered the install phase...
       - apt-get update -y
+      - apt-get install -y java-1.8.0-openjdk-devel
       - apt-get install -y maven
     finally:
       - echo This always runs even if the update or install command fails 
