--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.2</version>
 				<configuration>
 					<fork>true</fork>
 					<source>1.8</source>
