--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - echo Entered the install phase...
       - apt-get update -y
-      - apt-get install -y maven
+      - apt-get install -y apache-maven-3.5.2
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
