--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       java: openjdk8
     commands:
       - echo Entered the install phase...
+      - add-apt-repository ppa:openjdk-r/ppa
       - apt-get update -y
       - apt-get install openjdk-8-jdk
       - apt-get install -y maven
