--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 					<fork>true</fork>
 					<source>1.8</source>
       				<target>1.8</target>
-					<executable>/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.242.b08-0.amzn2.0.1.x86_64/bin/javac</executable>
+					<executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable>
 				</configuration>
 			</plugin>
 		</plugins>
