--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<version>1.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
@@ -59,12 +64,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<fork>true</fork>
-					<source>1.8</source>
-      				<target>1.8</target>
-					<executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable>
-				</configuration>
+				<!-- <configuration> -->
+				<!-- <fork>true</fork> -->
+				<!-- <source>1.8</source> -->
+				<!-- <target>1.8</target> -->
+				<!-- <executable>/usr/lib/jvm/java-8-openjdk-amd64/bin/javac</executable> -->
+				<!-- </configuration> -->
 			</plugin>
 		</plugins>
 	</build>
